PBEXENGDQA-4614 add: Ready Transfer